test/snapshot/negative/strict_mode_enforcer/Main.hx
package;

extern class BadExtern {}

class Main {
    public static function main() {
        var raw: Dynamic = 1;
        untyped __elixir__(":ok");
    }
}

